[tool.poetry]
name = "project-bdd"
version = "0.1.0"
description = "Proyecto Sistemas Distribuidos"
authors = ["ImMamey <32584037+ImMamey@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
